# yaml_cpp_struct

./: CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: test.yaml
example/: CMakeLists.txt  config.yaml  main.cpp  xmake.lua
include/: yaml_cpp_struct.hpp
